get list container

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,5 +6,8 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "WebService": "http://123.231.237.22/TPSOnlineServicesUAT/server.php?wsdl"
+    "WebService": "http://123.231.237.22/TPSOnlineServicesUAT/server.php?wsdl",
+    "ConnectionStrings": {
+        "GoLog": "Server=13.213.73.45;Port=5432;Database=gologsapi;User Id=postgres;Password=pg123"
+    }
 }
