--- a/SP2.csproj
+++ b/SP2.csproj
@@ -5,5 +5,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7"/>
   </ItemGroup>
 </Project>
