--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,8 @@
         }
     },
     "AllowedHosts": "*",
-    "WebService": "http://123.231.237.22/TPSOnlineServicesUAT/server.php?wsdl"
+    "WebService": "http://123.231.237.22/TPSOnlineServicesUAT/server.php?wsdl",
+    "ConnectionStrings": {
+        "GoLog": "Server=13.213.73.45;Port=5432;Database=gologsapi;User Id=postgres;Password=pg123"
+    }
 }
