--- a/SP2.csproj
+++ b/SP2.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8"/>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7"/>
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5"/>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8"/>
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7"/>
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.2"/>
+	</ItemGroup>
 </Project>
