add payment service, and improve main service

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,7 @@
         }
     },
     "WebService": "http://123.231.237.22/TPSOnlineServicesUAT/server.php?wsdl",
+    "BillService": "http://123.231.237.18:12057/KojaH2H/BillPaymentService?wsdl",
     "ConnectionStrings": {
         "GoLog": "Server=13.213.73.45;Port=5432;Database=gologsapi;User Id=postgres;Password=pg123"
     }
