--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,7 @@
     },
     "AllowedHosts": "*",
     "WebService": "http://123.231.237.22/TPSOnlineServicesUAT/server.php?wsdl",
+    "BillService": "http://123.231.237.18:12057/KojaH2H/BillPaymentService?wsdl",
     "ConnectionStrings": {
         "GoLog": "Server=13.213.73.45;Port=5432;Database=gologsapi;User Id=postgres;Password=pg123"
     }
