--- a/SP2.csproj
+++ b/SP2.csproj
@@ -4,9 +4,10 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5"/>
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8"/>
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7"/>
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7"/>
-		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.2"/>
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.3"/>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7"/>
 	</ItemGroup>
 </Project>
