--- a/SP2.csproj
+++ b/SP2.csproj
@@ -9,5 +9,6 @@
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7"/>
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.3"/>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7"/>
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.12"/>
 	</ItemGroup>
 </Project>
